# Nano-Agent

./: .gitignore  README.md  pyproject.toml
hello_agents/agents/: function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
hello_agents/context/: builder.py
hello_agents/core/: agent.py  config.py  database_config.py  llm.py
hello_agents/memory/: __init__.py  embedding.py
hello_agents/memory/rag/: document.py  pipeline.py
hello_agents/memory/storage/: document_store.py  qdrant_store.py
hello_agents/memory/types/: episodic.py  perceptual.py  semantic.py  working.py
hello_agents/protocols/mcp/: server.py
hello_agents/rl/: rewards.py  utils.py
hello_agents/tools/: base.py  chain.py
hello_agents/tools/builtin/: bfcl_evaluation_tool.py  calculator.py  gaia_evaluation_tool.py  llm_judge_tool.py  mcp_wrapper_tool.py  memory_tool.py  note_tool.py  protocol_tools.py  rag_tool.py  rl_training_tool.py  terminal_tool.py  win_rate_tool.py
nano_agent/agents/: function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
nano_agent/core/: agent.py  config.py  database_config.py  llm.py  message.py
nano_agent/evaluation/: __init__.py
nano_agent/memory/: base.py  manager.py
nano_agent/memory/rag/: pipeline.py
nano_agent/memory/storage/: __init__.py  neo4j_store.py  qdrant_store.py
nano_agent/memory/types/: episodic.py  perceptual.py
nano_agent/protocols/: base.py
nano_agent/rl/: __init__.py  rl_datasets.py  trainers.py  utils.py
nano_agent/tools/: registry.py
(+26 files in other folders)
