[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-agent"
version = "0.0.0"
description = "Nano-Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nano_agent*"]
exclude = ["test_examples*"]
